--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/vercel": "^5.0.2",
     "@fontsource-variable/open-sans": "^5.0.16",
+    "@types/react": "^18.2.29",
+    "@types/react-dom": "^18.2.14",
     "astro": "^3.3.2",
+    "atropos": "^2.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
