--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/vercel": "^5.0.2",
     "@fontsource-variable/open-sans": "^5.0.16",
+    "@fontsource/roboto": "^5.0.8",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
     "astro": "^3.3.2",
