--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
+    "@vercel/analytics": "^1.1.1",
     "astro": "^3.3.2",
     "atropos": "^2.0.2",
     "react": "^18.2.0",
