--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "atropos": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal-video": "^2.0.1",
     "tailwindcss": "^3.3.3"
   }
 }
