--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.2",
-    "@astrojs/vercel": "^5.0.2",
-    "@fontsource-variable/open-sans": "^5.0.16",
-    "@fontsource/roboto": "^5.0.8",
-    "@types/react": "^18.2.29",
-    "@types/react-dom": "^18.2.14",
-    "@vercel/analytics": "^1.1.1",
-    "astro": "^3.3.2",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^7.8.1",
+    "@fontsource-variable/open-sans": "^5.1.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@octa-labs/react-player-modal": "^1.0.7",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@vercel/analytics": "^1.3.1",
+    "astro": "^4.15.9",
     "atropos": "^2.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-modal-video": "^2.0.1",
-    "tailwindcss": "^3.3.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-modal-video": "^2.0.2",
+    "react-player": "^2.16.0",
+    "tailwindcss": "^3.4.13"
   }
 }
